apps/tasklane/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklane-backend
  namespace: tasklane
spec:
  replicas: 1

  selector:
    matchLabels:
      app: tasklane-backend

  template:
    metadata:
      labels:
        app: tasklane-backend

    spec:
      containers:
        - name: backend

          image: 904325153322.dkr.ecr.ap-south-1.amazonaws.com/cloudtriad-tasklane-backend:5a8f39c8e615b3e139918e97abbcd1abe8c6495b
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
              protocol: TCP

          startupProbe:
            httpGet:
              path: /health
              port: 5000
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5

          # Determines whether the pod should receive traffic.
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1

          # Determines whether Kubernetes should restart the container.
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
